--- a/sass/page.scss
+++ b/sass/page.scss
@@ -195,6 +195,13 @@ ul.datemenu{
   }
 }
 
+.faq{
+      padding:10px;
+      padding-bottom: 50px;
+      background: #47A9A0;
+      color:#fff;
+}
+
 .socialbuttons{
     text-align: center;
 }
