--- a/sass/page.scss
+++ b/sass/page.scss
@@ -60,8 +60,9 @@ ul.datemenu{
   box-shadow:-3px 3px 5px 1px rgba(0,0,0,.6);
 }
 
+$headerheight: 300px;
 .header{
-  min-height: 400px;
+  min-height: $headerheight;
   padding-top: 10px;
   color:#fff;
   position: relative;
@@ -69,7 +70,7 @@ ul.datemenu{
     position: absolute;
     top:0;
     left:0;
-    height:400px;
+    height:$headerheight;
     width:100%;
     background-position: fixed;
     background-size: cover;
@@ -83,7 +84,7 @@ ul.datemenu{
     position: absolute;
     top:0;
     left:0;
-    height:400px;
+    height:$headerheight;
     width:100%;
     background-position: fixed;
     background-size: cover;
@@ -108,7 +109,14 @@ ul.datemenu{
 
   .sub{
     margin-left:50px;
-    margin-top:20px;
+    margin-top:50px;
+    .thefloat{
+      float: right;
+      .brochure{
+        display: block;
+        margin: 5px 0px;
+      }
+    }
     img{
       width:125px;
       margin-right: 10px;
@@ -140,7 +148,7 @@ ul.datemenu{
       vertical-align: middle;
   }
 
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 800px) {
     .sub{
       margin-left:0px;
       margin-top:0px;
@@ -159,6 +167,12 @@ ul.datemenu{
         font-size: 1.5rem;
       }
     }
+  }
+}
+
+.navsection{
+  .container-fluid{
+    margin-left: 100px;
   }
 }
 
@@ -316,12 +330,15 @@ ul.datemenu{
     text-align: center;
     position: absolute;
     width:100%;
-    top:30%;
+    top:25%;
     .brochure{
       margin-top: 20px;
     }
     h2{
       text-align: center;
+    }
+    img{
+      width:130px;
     }
     ul{
       display: inline-block;
